[package]
name = "open-id-connect"
edition = "2024"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.42.0"
wstd = "0.6.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
